src/objects/loan__Transfer_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>loan__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__From_Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Transfer Transactions</relationshipLabel>
        <relationshipName>Transfer_Transactions_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__From_Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>From Savings Account</label>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Transfer Transactions</relationshipLabel>
        <relationshipName>Transfer_Transactions_From</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__To_Loan_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Loan Account</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Transfer Transactions (To Loan Account)</relationshipLabel>
        <relationshipName>Transfer_Transactions_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__To_Savings_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Savings Account</label>
        <referenceTo>loan__Savings_Account__c</referenceTo>
        <relationshipLabel>Transfer Transactions (To Savings Account)</relationshipLabel>
        <relationshipName>Transfer_Transactions_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <picklist>
            <picklistValues>
                <fullName>Loan to Savings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings to Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings to Savings</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__Voucher_Number__c</fullName>
        <displayFormat>TT-{00000000}</displayFormat>
        <label>Voucher Number</label>
        <type>AutoNumber</type>
    </fields>
    <label>Transfer Transaction</label>
    <nameField>
        <label>Transfer Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transfer Transactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>